<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headerReceiver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="16dp"
        android:text="@string/receiver"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/receiverExplanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/receiver_expl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerReceiver" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/receiverSourcePortLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/source_port">

        <EditText
            android:id="@+id/receiverSourcePort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="number|phone"
            android:autofillHints="@string/default_source_port"
            android:singleLine="true"
            android:text="@string/default_source_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receiverExplanation" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/receiverRepairPortLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repair_port">
        <EditText
            android:id="@+id/receiverRepairPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="number|phone"
            android:autofillHints="@string/default_repair_port"
            android:singleLine="true"
            android:text="@string/default_repair_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receiverSourcePort" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/startReceiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="startStopReceiver"
        android:text="@string/start_receiver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiverRepairPortLabel" />

    <TextView
        android:id="@+id/headerSender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:padding="16dp"
        android:text="@string/sender"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startReceiver" />

    <TextView
        android:id="@+id/senderExplanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sender_expl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerSender" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/targetSourcePortLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/source_port">

        <EditText
            android:id="@+id/targetSourcePort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="number|phone"
            android:autofillHints="@string/default_source_port"
            android:singleLine="true"
            android:text="@string/default_source_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/senderExplanation" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/targetRepairPortLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repair_port">
        <EditText
            android:id="@+id/targetRepairPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="number|phone"
            android:autofillHints="@string/default_repair_port"
            android:singleLine="true"
            android:text="@string/default_repair_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/targetSourcePort" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/targetIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/receiver_ip"
        android:inputType="number|phone"
        android:autofillHints=""
        android:singleLine="true"
        android:text="@string/default_receiver_ip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetRepairPortLabel" />

    <Button
        android:id="@+id/startSender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="startStopSender"
        android:text="@string/start_sender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetIp"
        tools:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>